app/assets/stylesheets/layout.css.scss
@import 'colors';

body {
  padding-top: 70px;
}

/* Sign Up Toggle Form */

#log-in,
#sign-up {
  margin-top: -20px;
  background-color: lighten($dark-gray, 3%);
  color: #fff;

  > .container {
    padding: 16px 0;
  }

  .popover {
    color: #333;
  }
}

.upcase {
  text-transform: uppercase;
  font-weight: 700;
}

.jumbotron.front-page {
  text-align: center;
}

.jumbotron.front-page h1.logo {
  font-size: 135px;
  text-transform: none;
  letter-spacing: -8px;
  margin: 0 auto 24px;
}

.jumbotron.front-page p + p {
  line-height: 0.8em;
  margin-bottom: 2em;
}

.jumbotron h1 {
  font-weight: 700;
  text-transform: uppercase;
  font-size: 30pt;
}

@media screen and (min-width: 992px) {
  .manage-sidebar.affix-bottom,
  .manage-sidebar.affix {
    width: 212px;
  }
}

@media screen and (min-width: 1200px) {
  .manage-sidebar.affix-bottom,
  .manage-sidebar.affix {
    width: 270px;
  }
}

.manage-sidebar {
  .panel {
    .panel-heading {
      padding: 20px;
      margin: -15px;

      .progress {
        height: 20px;
        margin-bottom: 2px;

        .progress-bar {
        }
      }

      .funded-label {
        font-size: 10px;
        text-transform: uppercase;
        text-align: center;
        line-height: 10px;
        margin-bottom: 10px;
      }

      .status-strip {
        border-top: 1px solid $dark-border;
        margin-right: -25px;
        margin-left: -25px;
        margin-bottom: -10px;
        padding: 5px 10px 0;

        .col-4 {
          padding-right: 5px;
          padding-left: 5px;
        }
      }

      .quantity {
        font-weight: 700;
        font-size: 18px;
        margin-bottom: -5px;
      }
      .status-label {
        font-size: 10px;
        text-transform: uppercase;
      }

    }
  }
}

#course-dropdown {
  > li > a.dropdown-toggle {
    text-align: left;
    vertical-align: middle;
    padding: 7px 12px 5px;
    min-height: 50px;

    > .no-course {
      padding: 9px 0;
      display: inline-block;
    }

    > .course-info + .caret {
      margin-bottom: 15px;
    }
  }

  .course-info {
    text-align: left;
    display: inline-block;

    .course-title {
      margin-bottom: -3px;
    }

    .course-date {
      font-size: 85%;
    }
  }
}

#settings-menu {
  > li > a.dropdown-toggle {
    padding: 10px 12px;
  }
}

.table td.border-top {
  border-top: 1px solid #000;
}

.email-all-link {
  margin-top: 20px;
}

#footer {
  margin-top: 40px;
  padding-bottom: 100px;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none;
}

